# reggie-bricks

./: .gitignore  AGENTS.md  README.md  build-script.sh  pyproject.toml
.apps/caddy/: Caddyfile  run_caddy.sh
.githooks/: pre-commit
apps/: pyproject.toml
apps/src/main/python/: test_run.py
build-scripts/: create_member_project.py  member_project.py  pyproject.toml  requirements_local_hook.py  sync_python_versions.py  sync_versions.py  utils.py  version.py
generators-franchise/: pyproject.toml
generators-franchise/src/generators_franchise/: app.py  app2.py  franchise_agreement.py
generators-franchise/src/generators_franchise/samples/: baskin_robins.html  buffalo_wild_wings.html  noodles_and_company.html  rocky_mountain_chocolate_factory.html  wendys.html
generators-franchise/src/generators_franchise/templates/: franchise_agreement.html
reggie-app-runner/: pyproject.toml
reggie-app-runner/src/reggie_app_runner/: app.py  app_config.py  app_runner.py  caddy.py  conda.py  docker.py  git.py  runners.py  runs.py  test_app_runner_config.py  test_conda.py  test_runners.py  test_runs.py
reggie-apps/: pyproject.toml
reggie-apps/src/reggie_apps/: caddy.py  conda.py  runners.py  test_conda.py  test_faker.py  test_runners.py  test_worker.py  test_workspace.py
reggie-core/: pyproject.toml
reggie-core/src/: sitecustomize.py
reggie-core/src/reggie_core/: __init__.py  funcs.py  inputs.py  jsons.py  logs.py  objects.py  parsers.py  paths.py  procs.py  projects.py  strs.py  test_procs.py
reggie-rx/: pyproject.toml
reggie-rx/src/reggie_rx/: procs.py  test_procs.py
reggie-tools/: pyproject.toml  requirements-local.txt
reggie-tools/src/reggie_tools/: catalogs.py  clients.py  configs.py  funcs.py  jsons.py  logs.py  paths.py  runtimes.py  test_configs.py
reggie_tools/: asyncs.py  build.gradle.kts  catalogs.py  clients.py  configs.py  inputs.py  jsons.py  logs.py  paths.py  pyproject.toml  runtimes.py  test_asysncs.py
reggie_tools/src/main/kotlin/com/reggie/bricks/tools/: App.kt  CameraView.kt
reggie_tools/src/main/python/reggie_tools/: catalogs.py  clients.py  configs.py  logs.py  paths.py  runtimes.py  test_configs.py
src/common/: utils.py
src/cv/: object_detection.py
src/dbx/: dbx_utils.py
tools/: pyproject.toml
tools/src/main/python/reggie_tools/: inputs.py  test_configs.py
