[build-system]
requires = [
    "uv_build>=0.8.23,<0.9.0",
]
build-backend = "uv_build"

[project]
name = "reggie-app-runner"
version = "0.0.1+ge812f35"
requires-python = ">=3.12"
dependencies = [
    "reggie-core @ file://${PROJECT_ROOT}/../reggie-core",
    "reggie-rx @ file://${PROJECT_ROOT}/../reggie-rx",
]

[tool.uv.sources.reggie-core]
workspace = true

[tool.uv.sources.reggie-rx]
workspace = true
