[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[project]
name = "reggie-apps"
version = "0.0.1+gbad2710"
requires-python = ">=3.12"
dependencies = [
  "reggie-tools @ file://${PROJECT_ROOT}/../reggie-tools",
]

[tool.uv.sources]
reggie-tools = { workspace = true }

