[build-system]
requires = [
    "uv_build>=0.8.23,<0.9.0",
]
build-backend = "uv_build"

[project]
name = "reggie-apps"
version = "0.0.1+gd3f9cbf"
requires-python = ">=3.12"
dependencies = [
    "reggie-core @ file://${PROJECT_ROOT}/../reggie-core",
    "miniconda",
    "pytimeparse",
]

[tool.uv.sources.reggie-core]
workspace = true
