[build-system]
requires = [
    "uv_build>=0.8.23,<0.9.0",
]
build-backend = "uv_build"

[project]
name = "reggie-core"
version = "0.0.1+g4b7f333"
requires-python = ">=3.10"
dependencies = [
    "filelock",
    "sitecustomize-entrypoints",
]

[project.entry-points.sitecustomize]
logging_auto_config = "reggie_core:logging_auto_config"

[tool.uv.build-backend]
data = { purelib = ["src/sitecustomize.py"] }
