[build-system]
requires = [
  "hatchling>=1.27.0",
  "hatch-vcs>=0.5.0",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"


[tool.hatch.version.raw-options]
search_parent_directories = true


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.hooks.custom]
path = "../build-scripts/requirements_local_hook.py"


[project]
name = "reggie-tools"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
  # Databricks
  "databricks-sdk",

  # Networking
  "requests",
  "urllib3",

  # Utilities
  "filelock",
]


[tool.hatch.build.targets.wheel]
packages = ["src/reggie_tools"]